--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,7 @@
   }
   :root,
   body[data-theme="light"] {
-    --shadow: 0 0% 0% 0.11;
-    --shadow-hover: 0 0% 0% 0.22;
+    --shadow: 0, 0, 0;
 
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
@@ -52,7 +51,7 @@
 
   .dark,
   body[data-theme="dark"] {
-    --shadow: 0 0% 100% 0.11;
+    --shadow: 255, 255, 255;
     --shadow-hover: 0 0% 100% 0.22;
 
     --background: 224 71% 4%;
